# structs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: client.rs  duration.rs  error.rs  jsonpath.rs  log.rs  main.rs  rpc.rs  service.rs
test/: data.json  size.json  test.sh
