[package]
name = "structs-sh"
version = "0.1.0"
edition = "2021"
description = "A local data structure service"
repository = "https://github.com/bww/structs"
readme = "README.md"
license = "BSD-3-Clause"

[[bin]]
name = "structs"
path = "src/main.rs"

[dependencies]
clap = { version="3.1", features=["derive"] }
colored = "2.0.0"
nom = "7.1.3"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
rand = "0.8.5"
ctrlc = "3.4.0"
